--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -29,6 +29,11 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    environment:
+      name: pypi
+      url: https://pypi.org/p/k2hr3client
+    permissions:
+      id-token: write
     strategy:
       fail-fast: false
       matrix:
@@ -69,9 +74,7 @@ jobs:
       run: python -m build
     - name: Publish distribution to PyPI
       if: ${{  matrix.python-version == '3.11' && startsWith(github.ref, 'refs/tags') }}
-      uses: pypa/gh-action-pypi-publish@master
-      with:
-        password: ${{ secrets.PYPI_API_TOKEN }}
+      uses: pypa/gh-action-pypi-publish@release/v1
 
 #
 # Local variables:
