Enables logging to a file

--- a/conf/k2hr3client.ini
+++ b/conf/k2hr3client.ini
@@ -1,19 +1,48 @@
+# -*- coding: utf-8 -*-
+#
+# k2hr3client - Python client for K2HR3 REST API
+#
+# Copyright 2024 LY Corporation
+#
+# K2HR3 is K2hdkc based Resource and Roles and policy Rules, gathers
+# common management information for the cloud.
+# K2HR3 can dynamically manage information as "who", "what", "operate".
+# These are stored as roles, resources, policies in K2hdkc, and the
+# client system can dynamically read and modify these information.
+#
+# For the full copyright and license information, please view
+# the license file that was distributed with this source code.
+#
+# AUTHOR:   Hirotaka Wakabayashi
+# CREATE:   Fri Oct 11 2024
+# REVISION:
+#
+#
 [DEFAULT]
 debug = False
-iaas_url = "http://172.24.4.1"
-iaas_project = "demo"
-iaas_user = "demo"
-iaas_password = "password"
+iaas_url = http://172.24.4.1
+iaas_project = demo
+iaas_user = demo
+iaas_password = password
 log_file = sys.stdout
 log_dir = logs
 log_level = logging.INFO
 
 [k2hr3]
-api_url = "http://127.0.0.1:18080"
-api_version = "v1"
+api_url = http://127.0.0.1:18080
+api_version = v1
 
 [http]
 timeout_seconds = 30
 retry_interval_seconds = 60
 max_retries = 3
 allow_self_signed_cert = True
+
+#
+# Local variables:
+# tab-width: 4
+# c-basic-offset: 4
+# End:
+# vim600: expandtab sw=4 ts=4 fdm=marker
+# vim<600: expandtab sw=4 ts=4
+#
