--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -43,7 +43,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.12", "3.11", "3.10", "3.9"]
+        python-version: ["3.13", "3.12", "3.11", "3.10", "3.9"]
     steps:
     - uses: actions/checkout@v4
     - name: Set up Python ${{ matrix.python-version }}
@@ -79,7 +79,7 @@ jobs:
       if: startsWith(github.ref, 'refs/tags')
       run: python -m build
     - name: Publish distribution to PyPI
-      if: ${{  matrix.python-version == '3.11' && startsWith(github.ref, 'refs/tags') }}
+      if: ${{  matrix.python-version == '3.12' && startsWith(github.ref, 'refs/tags') }}
       uses: pypa/gh-action-pypi-publish@release/v1
 
 #
